looping
<pre>
>>> for i in range(4):
... print("I am python")
  File "<stdin>", line 2
    print("I am python")
        ^
IndentationError: expected an indented block
>>> for i in range(4):
...     print("Iam python")
... 
Iam python
Iam python
Iam python
Iam python
</pre>

